--- a/index.html
+++ b/index.html
@@ -1,59 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paswan Pharmacy - Buy Medicine</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .call-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1000;
+      background-color: #28a745;
+      color: white;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+      text-decoration: none;
+    }
+    .call-button:hover {
+      background-color: #218838;
+    }
+  </style>
 </head>
+<body>
 
-<body onload="alert('page loaded successfully')">
-    <h1>welcome to HTML DOM Manipulation</h1>
-    <hr>
-
-    <div class="section">
-        <h3>1. onclick() Event</h3>
-        <button onclick="alert('Button Clicked!')">Click Me</button>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="#">Paswan Pharmacy</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+      </div>
     </div>
-    <hr>
+  </nav>
 
-    <div class="section">
-        <h3>2. onmouseover() Event && onmouseout event()</h3>
-        <p onmouseover="this.style.color='red'" onmouseout="this.style.color='blue'">
-            Move your mouse out of this text to see the color change.
-        </p>
-        <!--onchange() event triggerend -->
-        <div class="section">
-            <h3>3. onchange() Event</h3>
-            <select onchange="alert('Section Changed')">
-                <option value="">--select--</option>
-                <option value="">--option 1 selected--</option>
-                <option value="">--option 2 selected--</option>
-            </select>
+  <div class="container mt-5">
+    <h1 class="text-center text-success mb-4">Buy Medicine</h1>
+
+    <div class="card shadow p-4">
+      <form id="buyForm">
+        <div class="mb-3">
+          <label for="medicine" class="form-label">Select Medicine</label>
+          <select id="medicine" class="form-select" required>
+            <option value="">--Select--</option>
+            <option value="Paracetamol 500mg">Paracetamol 500mg</option>
+            <option value="Vitamin C 1000mg">Vitamin C 1000mg</option>
+            <option value="Cough Syrup 100ml">Cough Syrup 100ml</option>
+          </select>
         </div>
-        <hr>
-        <!--onkeydown() event triggered-->
-        <div class="section">
-            <h3>onkeydown() Event</h3>
-            <input type="text" onkeydown="console.log('key pressed')" placeholder="Type something here..">
+
+        <div class="mb-3">
+          <label for="quantity" class="form-label">Quantity</label>
+          <input type="number" id="quantity" class="form-control" min="1" required>
         </div>
-        <hr>
-        <!--onsubmit() event triggered-->
-        <div class="section">
-            <h3>5. onsubmit() Event() </h3>
-            <form onsubmit="alert('Form Submitted Successfully!'); return false;">
-                <input type="text" placeholder="Enter your name" required>
-                <button type="submit" id="btn">Submit</button>
-            </form>
+
+        <div class="mb-3">
+          <label for="phone" class="form-label">Phone Number</label>
+          <input type="tel" id="phone" class="form-control" required>
         </div>
-        <hr>
-        <!--addEventListener() event triggered-->
-        <script>
-            document.getElementById("btn").addEventListener("click", function (){
-                alert("Button Clicked using addEventListener!");
-            });
-        </script>
+
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-control" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="location" class="form-label">Delivery Location</label>
+          <input type="text" id="location" class="form-control" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="payment" class="form-label">Payment Method</label>
+          <select id="payment" class="form-select" required>
+            <option value="">--Select--</option>
+            <option value="Cash">Cash</option>
+            <option value="Card">Card</option>
+            <option value="UPI">UPI</option>
+          </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="remarks" class="form-label">Remarks</label>
+          <textarea id="remarks" class="form-control" rows="3"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-success w-100">Buy Now</button>
+      </form>
+    </div>
+
+    <div id="summary" class="card shadow p-4 mt-4 d-none">
+      <h3>Order Summary</h3>
+      <ul id="orderDetails"></ul>
+    </div>
+  </div>
+
+  <a href="tel:+9779800000000" class="call-button" title="Call Paswan Pharmacy">📞</a>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const form = document.getElementById('buyForm');
+    const summaryDiv = document.getElementById('summary');
+    const orderDetails = document.getElementById('orderDetails');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const medicine = document.getElementById('medicine').value;
+      const quantity = document.getElementById('quantity').value;
+      const phone = document.getElementById('phone').value;
+      const email = document.getElementById('email').value;
+      const location = document.getElementById('location').value;
+      const payment = document.getElementById('payment').value;
+      const remarks = document.getElementById('remarks').value;
+
+      if (!medicine || quantity <= 0 || !phone || !email || !location || !payment) {
+        alert('Please fill all required fields correctly.');
+        return;
+      }
+
+      orderDetails.innerHTML = `
+        <li><strong>Medicine:</strong> ${medicine}</li>
+        <li><strong>Quantity:</strong> ${quantity}</li>
+        <li><strong>Phone:</strong> ${phone}</li>
+        <li><strong>Email:</strong> ${email}</li>
+        <li><strong>Delivery Location:</strong> ${location}</li>
+        <li><strong>Payment Method:</strong> ${payment}</li>
+        <li><strong>Remarks:</strong> ${remarks}</li>
+      `;
+      summaryDiv.classList.remove('d-none');
+      summaryDiv.scrollIntoView({ behavior: 'smooth' });
+
+      form.reset();
+    });
+  </script>
 
 </body>
-
 </html>
